# ADHD-drift-visualizer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
skills/adhd-drift/: SKILL.md
src/adhd_drift/: __init__.py  classifier.py  cli.py  demo.py  embeddings.py  engine.py  history.py  recovery.py  scorer.py  signals.py  topics.py  tracker.py  types.py
src/adhd_drift/parsers/: __init__.py  chatgpt.py  claude.py  markdown.py
tests/: test_engine.py
ui/: dashboard.html  server.py
