[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adhd-drift-visualizer"
version = "0.1.0"
description = "Visualize cognitive drift in chat sessions — map how you pivot between topics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Kevin Qi"}]
keywords = ["adhd", "cognitive-drift", "conversation-analysis", "topic-tracking", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
voyage = ["voyageai>=0.3"]
openai = ["openai>=1.0"]
local = ["sentence-transformers>=2.2"]
ui = ["flask>=3.0"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
adhd-drift = "adhd_drift.cli:main"

[project.urls]
Homepage = "https://github.com/qinnovates/ADHD-drift-visualizer"
Issues = "https://github.com/qinnovates/ADHD-drift-visualizer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
